--- a/scss/main.scss
+++ b/scss/main.scss
@@ -218,6 +218,7 @@ button:focus { outline: none; }
 }
 
 .logo {
+	margin: 0 auto;
 	text-indent: -9999px;
 	background-image: url('/img/wesual.png');
 	background-size: 100%;
