--- a/public/css/main.css
+++ b/public/css/main.css
@@ -317,31 +317,32 @@ button:focus {
 
 /* line 198, ../../scss/main.scss */
 .container {
+  text-align: center;
   max-width: 980px;
   margin: 0 auto;
 }
 
-/* line 203, ../../scss/main.scss */
+/* line 204, ../../scss/main.scss */
 .header-padding {
   padding: 28px;
 }
 
-/* line 207, ../../scss/main.scss */
+/* line 208, ../../scss/main.scss */
 .hero-padding {
-  padding: 120px 28px 135px;
+  padding: 30px 28px 100px;
 }
 
-/* line 211, ../../scss/main.scss */
+/* line 212, ../../scss/main.scss */
 .base-section-padding {
   text-align: center;
   padding: 110px 0 135px;
 }
-/* line 215, ../../scss/main.scss */
+/* line 216, ../../scss/main.scss */
 .base-section-padding.telegraphic {
   padding-bottom: 80px;
 }
 
-/* line 220, ../../scss/main.scss */
+/* line 221, ../../scss/main.scss */
 .logo {
   margin: 0 auto;
   text-indent: -9999px;
@@ -355,7 +356,7 @@ button:focus {
 /****************************************
 * Intro animations
 ****************************************/
-/* line 240, ../../scss/main.scss */
+/* line 241, ../../scss/main.scss */
 .js .hero-header-first,
 .js .hero-header-second,
 .js .hero-container p,
@@ -364,7 +365,7 @@ button:focus {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
 }
-/* line 243, ../../scss/main.scss */
+/* line 244, ../../scss/main.scss */
 .js .hero-header-first,
 .js .hero-header-second {
   -webkit-transform: translate3d(0, 7.5px, 0);
@@ -373,7 +374,7 @@ button:focus {
   -o-transform: translate3d(0, 7.5px, 0);
   transform: translate3d(0, 7.5px, 0);
 }
-/* line 245, ../../scss/main.scss */
+/* line 246, ../../scss/main.scss */
 .js .hero-tv {
   -webkit-transform: translate3d(30px, 0, 0) scale(0.95) rotateY(-10deg);
   -moz-transform: translate3d(30px, 0, 0) scale(0.95) rotateY(-10deg);
@@ -386,7 +387,7 @@ button:focus {
   -o-transform-origin: 100% 50%;
   transform-origin: 100% 50%;
 }
-/* line 251, ../../scss/main.scss */
+/* line 252, ../../scss/main.scss */
 .js .hero {
   -webkit-perspective: 1100;
   -moz-perspective: 1100;
@@ -394,7 +395,7 @@ button:focus {
   -o-perspective: 1100;
   perspective: 1100;
 }
-/* line 253, ../../scss/main.scss */
+/* line 254, ../../scss/main.scss */
 .js .hero-header-first {
   -webkit-transition: all 700ms ease;
   -moz-transition: all 700ms ease;
@@ -405,7 +406,7 @@ button:focus {
   -o-transition-delay: 300ms;
   transition-delay: 300ms;
 }
-/* line 258, ../../scss/main.scss */
+/* line 259, ../../scss/main.scss */
 .js .hero-header-second {
   -webkit-transition: all 700ms ease;
   -moz-transition: all 700ms ease;
@@ -416,7 +417,7 @@ button:focus {
   -o-transition-delay: 600ms;
   transition-delay: 600ms;
 }
-/* line 264, ../../scss/main.scss */
+/* line 265, ../../scss/main.scss */
 .js .hero-container p,
 .js .hero-container .sign-up {
   -webkit-transition: opacity 1000ms ease;
@@ -428,7 +429,7 @@ button:focus {
   -o-transition-delay: 1000ms;
   transition-delay: 1000ms;
 }
-/* line 269, ../../scss/main.scss */
+/* line 270, ../../scss/main.scss */
 .js .hero-tv {
   -webkit-transition: all 1200ms ease;
   -moz-transition: all 1200ms ease;
@@ -439,7 +440,7 @@ button:focus {
   -o-transition-delay: 1000ms;
   transition-delay: 1000ms;
 }
-/* line 280, ../../scss/main.scss */
+/* line 281, ../../scss/main.scss */
 .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .hero-header-first,
 .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .hero-header-second,
 .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .hero-container p,
@@ -448,7 +449,7 @@ button:focus {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
 }
-/* line 283, ../../scss/main.scss */
+/* line 284, ../../scss/main.scss */
 .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .hero-header-first,
 .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .hero-header-second {
   -webkit-transform: translate3d(0, 0, 0);
@@ -457,7 +458,7 @@ button:focus {
   -o-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
 }
-/* line 285, ../../scss/main.scss */
+/* line 286, ../../scss/main.scss */
 .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .hero-tv {
   -webkit-transform: translate3d(0, 0, 0) scale(1) rotateY(0deg);
   -moz-transform: translate3d(0, 0, 0) scale(1) rotateY(0deg);
@@ -465,13 +466,13 @@ button:focus {
   -o-transform: translate3d(0, 0, 0) scale(1) rotateY(0deg);
   transform: translate3d(0, 0, 0) scale(1) rotateY(0deg);
 }
-/* line 291, ../../scss/main.scss */
+/* line 292, ../../scss/main.scss */
 .js .features h2,
 .js .features .feature {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
 }
-/* line 294, ../../scss/main.scss */
+/* line 295, ../../scss/main.scss */
 .js .features h2,
 .js .features .feature {
   -webkit-transform: translate3d(0, 15px, 0);
@@ -480,7 +481,7 @@ button:focus {
   -o-transform: translate3d(0, 15px, 0);
   transform: translate3d(0, 15px, 0);
 }
-/* line 297, ../../scss/main.scss */
+/* line 298, ../../scss/main.scss */
 .js .features h2 {
   -webkit-transition: all 750ms ease;
   -moz-transition: all 750ms ease;
@@ -491,41 +492,41 @@ button:focus {
   -o-transition-delay: 100ms;
   transition-delay: 100ms;
 }
-/* line 302, ../../scss/main.scss */
+/* line 303, ../../scss/main.scss */
 .js .features .feature {
   -webkit-transition: all 750ms ease;
   -moz-transition: all 750ms ease;
   -o-transition: all 750ms ease;
   transition: all 750ms ease;
 }
-/* line 304, ../../scss/main.scss */
+/* line 305, ../../scss/main.scss */
 .js .features .feature-first {
   -webkit-transition-delay: 200ms;
   -moz-transition-delay: 200ms;
   -o-transition-delay: 200ms;
   transition-delay: 200ms;
 }
-/* line 306, ../../scss/main.scss */
+/* line 307, ../../scss/main.scss */
 .js .features .feature-second {
   -webkit-transition-delay: 400ms;
   -moz-transition-delay: 400ms;
   -o-transition-delay: 400ms;
   transition-delay: 400ms;
 }
-/* line 308, ../../scss/main.scss */
+/* line 309, ../../scss/main.scss */
 .js .features .feature-third {
   -webkit-transition-delay: 600ms;
   -moz-transition-delay: 600ms;
   -o-transition-delay: 600ms;
   transition-delay: 600ms;
 }
-/* line 315, ../../scss/main.scss */
+/* line 316, ../../scss/main.scss */
 .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .features.active h2,
 .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .features.active .feature {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
 }
-/* line 318, ../../scss/main.scss */
+/* line 319, ../../scss/main.scss */
 .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .features.active h2,
 .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .features.active .feature {
   -webkit-transform: translate3d(0, 0, 0);
@@ -538,23 +539,23 @@ button:focus {
 /****************************************
 * Index
 ****************************************/
-/* line 326, ../../scss/main.scss */
+/* line 327, ../../scss/main.scss */
 .menu-header {
   position: relative;
   z-index: 10;
 }
 
-/* line 332, ../../scss/main.scss */
+/* line 333, ../../scss/main.scss */
 .menu li {
   display: inline-block;
   margin: 5px 0 0 15px;
 }
-/* line 336, ../../scss/main.scss */
+/* line 337, ../../scss/main.scss */
 .menu li a {
   position: relative;
   color: #7118b2;
 }
-/* line 341, ../../scss/main.scss */
+/* line 342, ../../scss/main.scss */
 .menu li a:after {
   -webkit-transition: all 200ms ease;
   -moz-transition: all 200ms ease;
@@ -575,11 +576,11 @@ button:focus {
   background: #7118b2;
   content: '';
 }
-/* line 354, ../../scss/main.scss */
+/* line 355, ../../scss/main.scss */
 .menu li a:hover {
   color: #7118b2;
 }
-/* line 357, ../../scss/main.scss */
+/* line 358, ../../scss/main.scss */
 .menu li a:hover:after {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=25);
   opacity: 0.25;
@@ -590,25 +591,24 @@ button:focus {
   transform: translate3d(0, 2px, 0);
 }
 
-/* line 365, ../../scss/main.scss */
+/* line 366, ../../scss/main.scss */
 .relative {
   position: relative;
 }
 
-/* line 369, ../../scss/main.scss */
+/* line 370, ../../scss/main.scss */
 .hero-container {
+  margin: 0 auto;
   width: 650px;
 }
-/* line 372, ../../scss/main.scss */
+/* line 374, ../../scss/main.scss */
 .hero-container p {
   max-width: 570px;
 }
 
-/* line 377, ../../scss/main.scss */
+/* line 379, ../../scss/main.scss */
 .hero-tv {
-  position: absolute;
-  left: 690px;
-  top: 90px;
+  margin-top: 30px;
   width: 676px;
 }
 
