--- a/scss/main.scss
+++ b/scss/main.scss
@@ -196,6 +196,7 @@ button:focus { outline: none; }
 }
 
 .container {
+	text-align: center;
 	max-width: 980px;
 	margin: 0 auto;
 }
@@ -205,7 +206,7 @@ button:focus { outline: none; }
 }
 
 .hero-padding {
-	padding: 120px 28px 135px;
+	padding: 30px 28px 100px;
 }
 
 .base-section-padding {
@@ -367,6 +368,7 @@ button:focus { outline: none; }
 }
 
 .hero-container {
+	margin: 0 auto;
 	width: 650px;
 
 	p {
@@ -375,9 +377,7 @@ button:focus { outline: none; }
 }
 
 .hero-tv {
-	position: absolute;
-	left: 690px;
-	top: 90px;
+	margin-top: 30px;
 	width: 676px;
 }
 
