--- a/public/css/main.css
+++ b/public/css/main.css
@@ -374,11 +374,11 @@ button:focus {
 }
 /* line 244, ../../scss/main.scss */
 .js .hero-tv {
-  -webkit-transform: translate3d(30px, 0, 0) scale(0.95) rotateY(-10deg);
-  -moz-transform: translate3d(30px, 0, 0) scale(0.95) rotateY(-10deg);
-  -ms-transform: translate3d(30px, 0, 0) scale(0.95) rotateY(-10deg);
-  -o-transform: translate3d(30px, 0, 0) scale(0.95) rotateY(-10deg);
-  transform: translate3d(30px, 0, 0) scale(0.95) rotateY(-10deg);
+  -webkit-transform: translate3d(35px, 0, 0) scale(0.925) rotateY(-10deg);
+  -moz-transform: translate3d(35px, 0, 0) scale(0.925) rotateY(-10deg);
+  -ms-transform: translate3d(35px, 0, 0) scale(0.925) rotateY(-10deg);
+  -o-transform: translate3d(35px, 0, 0) scale(0.925) rotateY(-10deg);
+  transform: translate3d(35px, 0, 0) scale(0.925) rotateY(-10deg);
   -webkit-transform-origin: 100% 50%;
   -moz-transform-origin: 100% 50%;
   -ms-transform-origin: 100% 50%;
@@ -429,16 +429,17 @@ button:focus {
 }
 /* line 268, ../../scss/main.scss */
 .js .hero-tv {
-  -webkit-transition: all 1200ms ease;
-  -moz-transition: all 1200ms ease;
-  -o-transition: all 1200ms ease;
-  transition: all 1200ms ease;
+  -webkit-transition: all 1250ms ease;
+  -moz-transition: all 1250ms ease;
+  -o-transition: all 1250ms ease;
+  transition: all 1250ms ease;
   -webkit-transition-delay: 1000ms;
   -moz-transition-delay: 1000ms;
   -o-transition-delay: 1000ms;
   transition-delay: 1000ms;
+  -webkit-backface-visibility: hidden;
 }
-/* line 279, ../../scss/main.scss */
+/* line 280, ../../scss/main.scss */
 .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .hero-header-first,
 .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .hero-header-second,
 .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .hero-container p,
@@ -447,7 +448,7 @@ button:focus {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
 }
-/* line 282, ../../scss/main.scss */
+/* line 283, ../../scss/main.scss */
 .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .hero-header-first,
 .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .hero-header-second {
   -webkit-transform: translate3d(0, 0, 0);
@@ -456,7 +457,7 @@ button:focus {
   -o-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
 }
-/* line 284, ../../scss/main.scss */
+/* line 285, ../../scss/main.scss */
 .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .hero-tv {
   -webkit-transform: translate3d(0, 0, 0) scale(1) rotateY(0deg);
   -moz-transform: translate3d(0, 0, 0) scale(1) rotateY(0deg);
@@ -464,13 +465,13 @@ button:focus {
   -o-transform: translate3d(0, 0, 0) scale(1) rotateY(0deg);
   transform: translate3d(0, 0, 0) scale(1) rotateY(0deg);
 }
-/* line 290, ../../scss/main.scss */
+/* line 291, ../../scss/main.scss */
 .js .features h2,
 .js .features .feature {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
 }
-/* line 293, ../../scss/main.scss */
+/* line 294, ../../scss/main.scss */
 .js .features h2,
 .js .features .feature {
   -webkit-transform: translate3d(0, 15px, 0);
@@ -479,7 +480,7 @@ button:focus {
   -o-transform: translate3d(0, 15px, 0);
   transform: translate3d(0, 15px, 0);
 }
-/* line 296, ../../scss/main.scss */
+/* line 297, ../../scss/main.scss */
 .js .features h2 {
   -webkit-transition: all 750ms ease;
   -moz-transition: all 750ms ease;
@@ -490,41 +491,41 @@ button:focus {
   -o-transition-delay: 100ms;
   transition-delay: 100ms;
 }
-/* line 301, ../../scss/main.scss */
+/* line 302, ../../scss/main.scss */
 .js .features .feature {
   -webkit-transition: all 750ms ease;
   -moz-transition: all 750ms ease;
   -o-transition: all 750ms ease;
   transition: all 750ms ease;
 }
-/* line 303, ../../scss/main.scss */
+/* line 304, ../../scss/main.scss */
 .js .features .feature-first {
   -webkit-transition-delay: 200ms;
   -moz-transition-delay: 200ms;
   -o-transition-delay: 200ms;
   transition-delay: 200ms;
 }
-/* line 305, ../../scss/main.scss */
+/* line 306, ../../scss/main.scss */
 .js .features .feature-second {
   -webkit-transition-delay: 400ms;
   -moz-transition-delay: 400ms;
   -o-transition-delay: 400ms;
   transition-delay: 400ms;
 }
-/* line 307, ../../scss/main.scss */
+/* line 308, ../../scss/main.scss */
 .js .features .feature-third {
   -webkit-transition-delay: 600ms;
   -moz-transition-delay: 600ms;
   -o-transition-delay: 600ms;
   transition-delay: 600ms;
 }
-/* line 314, ../../scss/main.scss */
+/* line 315, ../../scss/main.scss */
 .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .features.active h2,
 .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .features.active .feature {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
 }
-/* line 317, ../../scss/main.scss */
+/* line 318, ../../scss/main.scss */
 .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .features.active h2,
 .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .features.active .feature {
   -webkit-transform: translate3d(0, 0, 0);
@@ -537,23 +538,23 @@ button:focus {
 /****************************************
 * Index
 ****************************************/
-/* line 325, ../../scss/main.scss */
+/* line 326, ../../scss/main.scss */
 .menu-header {
   position: relative;
   z-index: 10;
 }
 
-/* line 331, ../../scss/main.scss */
+/* line 332, ../../scss/main.scss */
 .menu li {
   display: inline-block;
   margin: 5px 0 0 15px;
 }
-/* line 335, ../../scss/main.scss */
+/* line 336, ../../scss/main.scss */
 .menu li a {
   position: relative;
   color: #7118b2;
 }
-/* line 340, ../../scss/main.scss */
+/* line 341, ../../scss/main.scss */
 .menu li a:after {
   -webkit-transition: all 200ms ease;
   -moz-transition: all 200ms ease;
@@ -574,11 +575,11 @@ button:focus {
   background: #7118b2;
   content: '';
 }
-/* line 353, ../../scss/main.scss */
+/* line 354, ../../scss/main.scss */
 .menu li a:hover {
   color: #7118b2;
 }
-/* line 356, ../../scss/main.scss */
+/* line 357, ../../scss/main.scss */
 .menu li a:hover:after {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=25);
   opacity: 0.25;
@@ -589,21 +590,21 @@ button:focus {
   transform: translate3d(0, 2px, 0);
 }
 
-/* line 364, ../../scss/main.scss */
+/* line 365, ../../scss/main.scss */
 .relative {
   position: relative;
 }
 
-/* line 368, ../../scss/main.scss */
+/* line 369, ../../scss/main.scss */
 .hero-container {
   width: 650px;
 }
-/* line 371, ../../scss/main.scss */
+/* line 372, ../../scss/main.scss */
 .hero-container p {
   max-width: 570px;
 }
 
-/* line 376, ../../scss/main.scss */
+/* line 377, ../../scss/main.scss */
 .hero-tv {
   position: absolute;
   left: 690px;
@@ -611,13 +612,13 @@ button:focus {
   width: 676px;
 }
 
-/* line 383, ../../scss/main.scss */
+/* line 384, ../../scss/main.scss */
 .macbook {
   position: relative;
   width: 828px;
   margin: 50px auto 0;
 }
-/* line 388, ../../scss/main.scss */
+/* line 389, ../../scss/main.scss */
 .macbook .macbook-viewport {
   position: absolute;
   z-index: 2;
@@ -627,19 +628,19 @@ button:focus {
   left: 12.1%;
   overflow: hidden;
 }
-/* line 398, ../../scss/main.scss */
+/* line 399, ../../scss/main.scss */
 .macbook img {
   position: relative;
   z-index: 1;
   width: 100%;
 }
 
-/* line 405, ../../scss/main.scss */
+/* line 406, ../../scss/main.scss */
 .features {
   text-align: center;
 }
 
-/* line 409, ../../scss/main.scss */
+/* line 410, ../../scss/main.scss */
 .feature {
   display: inline-block;
   text-align: center;
@@ -647,22 +648,22 @@ button:focus {
   min-width: 300px;
   margin-top: 70px;
 }
-/* line 416, ../../scss/main.scss */
+/* line 417, ../../scss/main.scss */
 .feature strong {
   margin-bottom: 10px;
 }
-/* line 418, ../../scss/main.scss */
+/* line 419, ../../scss/main.scss */
 .feature i {
   font-size: 90px;
   margin-bottom: 65px;
 }
-/* line 423, ../../scss/main.scss */
+/* line 424, ../../scss/main.scss */
 .feature p {
   margin: 0 auto;
   max-width: 275px;
 }
 
-/* line 429, ../../scss/main.scss */
+/* line 430, ../../scss/main.scss */
 .feature-bubble {
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
@@ -674,17 +675,17 @@ button:focus {
   margin: 0 auto 30px;
 }
 
-/* line 436, ../../scss/main.scss */
+/* line 437, ../../scss/main.scss */
 .telegraphic h2 {
   margin-bottom: 50px;
 }
 
-/* line 438, ../../scss/main.scss */
+/* line 439, ../../scss/main.scss */
 .slider {
   width: 100%;
 }
 
-/* line 442, ../../scss/main.scss */
+/* line 443, ../../scss/main.scss */
 .slider-viewport {
   -webkit-perspective: 1500;
   -moz-perspective: 1500;
@@ -694,7 +695,7 @@ button:focus {
   position: relative;
   height: 100%;
 }
-/* line 447, ../../scss/main.scss */
+/* line 448, ../../scss/main.scss */
 .slider-viewport li {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
@@ -708,17 +709,18 @@ button:focus {
   -ms-transform-origin: 50% 100%;
   -o-transform-origin: 50% 100%;
   transform-origin: 50% 100%;
+  cursor: pointer;
   position: absolute;
   z-index: 1;
   top: 0;
   left: 0;
 }
-/* line 456, ../../scss/main.scss */
+/* line 458, ../../scss/main.scss */
 .slider-viewport li img {
   display: block;
   width: 100%;
 }
-/* line 461, ../../scss/main.scss */
+/* line 463, ../../scss/main.scss */
 .slider-viewport li.is-next {
   -webkit-transition: all 1000ms ease;
   -moz-transition: all 1000ms ease;
@@ -736,7 +738,7 @@ button:focus {
   -o-transition-delay: 275ms;
   transition-delay: 275ms;
 }
-/* line 468, ../../scss/main.scss */
+/* line 470, ../../scss/main.scss */
 .slider-viewport li.active {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
@@ -749,7 +751,7 @@ button:focus {
   z-index: 2;
   float: left;
 }
-/* line 476, ../../scss/main.scss */
+/* line 478, ../../scss/main.scss */
 .slider-viewport li.remove {
   -webkit-transition: all 600ms ease;
   -moz-transition: all 600ms ease;
@@ -764,12 +766,12 @@ button:focus {
   opacity: 0;
 }
 
-/* line 484, ../../scss/main.scss */
+/* line 486, ../../scss/main.scss */
 .slider-pagination {
   text-align: center;
   cursor: default;
 }
-/* line 488, ../../scss/main.scss */
+/* line 490, ../../scss/main.scss */
 .slider-pagination li {
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
@@ -789,20 +791,20 @@ button:focus {
   cursor: pointer;
   overflow: hidden;
 }
-/* line 500, ../../scss/main.scss */
+/* line 502, ../../scss/main.scss */
 .slider-pagination li.active {
-  -webkit-transform: scale(1.2);
-  -moz-transform: scale(1.2);
-  -ms-transform: scale(1.2);
-  -o-transform: scale(1.2);
-  transform: scale(1.2);
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  -o-transform: scale(1.1);
+  transform: scale(1.1);
   background: #fff;
 }
 
 /****************************************
 * Misc.
 ****************************************/
-/* line 511, ../../scss/main.scss */
+/* line 513, ../../scss/main.scss */
 #mfPreviewBar, #mfPreviewBarShow {
   display: none !important;
 }
