--- a/scss/main.scss
+++ b/scss/main.scss
@@ -137,7 +137,9 @@ button:focus { outline: none; }
 	border: 2px solid #fff;
 	font-size: 18px;
 
-	&:hover { border: 2px solid #d0d0d0; }
+	&:hover, &:active, &:focus {
+		border: 2px solid #d0d0d0;
+	}
 }
 
 .base-button {
@@ -164,6 +166,10 @@ button:focus { outline: none; }
 
 .input-error {
 	border-color: #f00;
+
+	&:active, &:focus {
+		border: 2px solid #d0d0d0;
+	}
 }
 
 .row {
