--- a/scss/main.scss
+++ b/scss/main.scss
@@ -47,7 +47,7 @@ $wesual-purple-hover: #7118b2;
 .icon-twitter:before {
 	content: "\e603";
 	color: #2dabdf;
-	font-size: 30px;
+	font-size: 50px;
 }
 
 .icon-star:before {
@@ -146,7 +146,7 @@ button:focus { outline: none; }
 	text-transform: uppercase;
 	font-size: 16px;
 	font-weight: 600;
-	padding: 18px 36px 17px;
+	padding: 18px 36px 16px;
 	color: #fff;
 	border: 3px solid $wesual-purple;
 
@@ -163,7 +163,7 @@ button:focus { outline: none; }
 }
 
 .input-error {
-	border-color: #f00;
+	border-color: #fd5b5b !important;
 }
 
 .row {
@@ -437,6 +437,22 @@ button:focus { outline: none; }
 
 .telegraphic h2 { margin-bottom: 50px; }
 
+footer.base-section-padding {
+  padding: 80px 0 300px;
+
+  .sign-up {
+    margin: 40px 0 150px;
+
+    .base-input { border: 2px solid #d0d0d0; }
+  }
+
+  i {
+    position: relative;
+    top: 15px;
+    margin: 0 -3px 0;
+  }
+}
+
 .slider {
 	width: 100%;
 }
@@ -450,7 +466,6 @@ button:focus { outline: none; }
     @include opacity(0);
     @include transform(translate3d(0, 52.5px, 0) rotateX(40deg) scale(0.825));
     @include transform-origin(50%, 100%);
-    cursor: pointer;
     position: absolute;
     z-index: 1;
     top: 0;
@@ -474,6 +489,7 @@ button:focus { outline: none; }
       position: relative;
       z-index: 2;
       float: left;
+      cursor: pointer;
     }
 
     &.remove {
