--- a/public/css/main.css
+++ b/public/css/main.css
@@ -99,7 +99,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 .icon-twitter:before {
   content: "\e603";
   color: #2dabdf;
-  font-size: 30px;
+  font-size: 50px;
 }
 
 /* line 53, ../../scss/main.scss */
@@ -251,7 +251,7 @@ button:focus {
   text-transform: uppercase;
   font-size: 16px;
   font-weight: 600;
-  padding: 18px 36px 17px;
+  padding: 18px 36px 16px;
   color: #fff;
   border: 3px solid #7118b2;
 }
@@ -270,7 +270,7 @@ button:focus {
 
 /* line 165, ../../scss/main.scss */
 .input-error {
-  border-color: #f00;
+  border-color: #fd5b5b !important;
 }
 
 /* line 169, ../../scss/main.scss */
@@ -682,11 +682,30 @@ button:focus {
 }
 
 /* line 440, ../../scss/main.scss */
+footer.base-section-padding {
+  padding: 80px 0 300px;
+}
+/* line 443, ../../scss/main.scss */
+footer.base-section-padding .sign-up {
+  margin: 40px 0 150px;
+}
+/* line 446, ../../scss/main.scss */
+footer.base-section-padding .sign-up .base-input {
+  border: 2px solid #d0d0d0;
+}
+/* line 449, ../../scss/main.scss */
+footer.base-section-padding i {
+  position: relative;
+  top: 15px;
+  margin: 0 -3px 0;
+}
+
+/* line 456, ../../scss/main.scss */
 .slider {
   width: 100%;
 }
 
-/* line 444, ../../scss/main.scss */
+/* line 460, ../../scss/main.scss */
 .slider-viewport {
   -webkit-perspective: 1500;
   -moz-perspective: 1500;
@@ -696,7 +715,7 @@ button:focus {
   position: relative;
   height: 100%;
 }
-/* line 449, ../../scss/main.scss */
+/* line 465, ../../scss/main.scss */
 .slider-viewport li {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
@@ -710,18 +729,17 @@ button:focus {
   -ms-transform-origin: 50% 100%;
   -o-transform-origin: 50% 100%;
   transform-origin: 50% 100%;
-  cursor: pointer;
   position: absolute;
   z-index: 1;
   top: 0;
   left: 0;
 }
-/* line 459, ../../scss/main.scss */
+/* line 474, ../../scss/main.scss */
 .slider-viewport li img {
   display: block;
   width: 100%;
 }
-/* line 464, ../../scss/main.scss */
+/* line 479, ../../scss/main.scss */
 .slider-viewport li.is-next {
   -webkit-transition: all 1000ms ease;
   -moz-transition: all 1000ms ease;
@@ -739,7 +757,7 @@ button:focus {
   -o-transition-delay: 275ms;
   transition-delay: 275ms;
 }
-/* line 471, ../../scss/main.scss */
+/* line 486, ../../scss/main.scss */
 .slider-viewport li.active {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
@@ -751,8 +769,9 @@ button:focus {
   position: relative;
   z-index: 2;
   float: left;
+  cursor: pointer;
 }
-/* line 479, ../../scss/main.scss */
+/* line 495, ../../scss/main.scss */
 .slider-viewport li.remove {
   -webkit-transition: all 600ms ease;
   -moz-transition: all 600ms ease;
@@ -767,12 +786,12 @@ button:focus {
   opacity: 0;
 }
 
-/* line 487, ../../scss/main.scss */
+/* line 503, ../../scss/main.scss */
 .slider-pagination {
   text-align: center;
   cursor: default;
 }
-/* line 491, ../../scss/main.scss */
+/* line 507, ../../scss/main.scss */
 .slider-pagination li {
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
@@ -792,7 +811,7 @@ button:focus {
   cursor: pointer;
   overflow: hidden;
 }
-/* line 503, ../../scss/main.scss */
+/* line 519, ../../scss/main.scss */
 .slider-pagination li.active {
   -webkit-transform: scale(1.1);
   -moz-transform: scale(1.1);
@@ -805,7 +824,7 @@ button:focus {
 /****************************************
 * Misc.
 ****************************************/
-/* line 514, ../../scss/main.scss */
+/* line 530, ../../scss/main.scss */
 #mfPreviewBar, #mfPreviewBarShow {
   display: none !important;
 }
