--- a/public/css/main.css
+++ b/public/css/main.css
@@ -251,7 +251,7 @@ button:focus {
   text-transform: uppercase;
   font-size: 16px;
   font-weight: 600;
-  padding: 18px 36px 17px;
+  padding: 17px 36px 16px;
   color: #fff;
   border: 3px solid #7118b2;
 }
@@ -333,7 +333,7 @@ button:focus {
 
 /* line 214, ../../scss/main.scss */
 .hero-padding {
-  padding: 30px 28px 100px;
+  padding: 30px 28px 370px;
 }
 
 /* line 218, ../../scss/main.scss */
@@ -378,19 +378,6 @@ button:focus {
   -o-transform: translate3d(0, 7.5px, 0);
   transform: translate3d(0, 7.5px, 0);
 }
-/* line 252, ../../scss/main.scss */
-.js .hero-tv {
-  -webkit-transform: translate3d(35px, 0, 0) scale(0.925) rotateY(-10deg);
-  -moz-transform: translate3d(35px, 0, 0) scale(0.925) rotateY(-10deg);
-  -ms-transform: translate3d(35px, 0, 0) scale(0.925) rotateY(-10deg);
-  -o-transform: translate3d(35px, 0, 0) scale(0.925) rotateY(-10deg);
-  transform: translate3d(35px, 0, 0) scale(0.925) rotateY(-10deg);
-  -webkit-transform-origin: 100% 50%;
-  -moz-transform-origin: 100% 50%;
-  -ms-transform-origin: 100% 50%;
-  -o-transform-origin: 100% 50%;
-  transform-origin: 100% 50%;
-}
 /* line 258, ../../scss/main.scss */
 .js .hero {
   -webkit-perspective: 1100;
@@ -433,18 +420,6 @@ button:focus {
   -o-transition-delay: 1000ms;
   transition-delay: 1000ms;
 }
-/* line 276, ../../scss/main.scss */
-.js .hero-tv {
-  -webkit-transition: all 1250ms ease;
-  -moz-transition: all 1250ms ease;
-  -o-transition: all 1250ms ease;
-  transition: all 1250ms ease;
-  -webkit-transition-delay: 1000ms;
-  -moz-transition-delay: 1000ms;
-  -o-transition-delay: 1000ms;
-  transition-delay: 1000ms;
-  -webkit-backface-visibility: hidden;
-}
 /* line 288, ../../scss/main.scss */
 .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .hero-header-first,
 .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .hero-header-second,
@@ -462,14 +437,6 @@ button:focus {
   -ms-transform: translate3d(0, 0, 0);
   -o-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
-}
-/* line 293, ../../scss/main.scss */
-.js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .hero-tv {
-  -webkit-transform: translate3d(0, 0, 0) scale(1) rotateY(0deg);
-  -moz-transform: translate3d(0, 0, 0) scale(1) rotateY(0deg);
-  -ms-transform: translate3d(0, 0, 0) scale(1) rotateY(0deg);
-  -o-transform: translate3d(0, 0, 0) scale(1) rotateY(0deg);
-  transform: translate3d(0, 0, 0) scale(1) rotateY(0deg);
 }
 /* line 299, ../../scss/main.scss */
 .js .features h2,
@@ -605,25 +572,38 @@ button:focus {
 .hero-container {
   margin: 0 auto;
   width: 650px;
+  padding-bottom: 30px;
 }
-/* line 381, ../../scss/main.scss */
+/* line 382, ../../scss/main.scss */
 .hero-container p {
   max-width: 570px;
 }
 
-/* line 386, ../../scss/main.scss */
-.hero-tv {
-  margin-top: 30px;
-  width: 676px;
+/* line 387, ../../scss/main.scss */
+.on-top {
+  z-index: 99;
+  position: relative;
 }
 
-/* line 391, ../../scss/main.scss */
+/* line 392, ../../scss/main.scss */
+.hero-tv {
+  width: 676px;
+  position: absolute;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  -moz-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  -o-transform: translateX(-50%);
+  transform: translateX(-50%);
+}
+
+/* line 399, ../../scss/main.scss */
 .macbook {
   position: relative;
   width: 828px;
   margin: 50px auto 0;
 }
-/* line 396, ../../scss/main.scss */
+/* line 404, ../../scss/main.scss */
 .macbook .macbook-viewport {
   position: absolute;
   z-index: 2;
@@ -633,19 +613,19 @@ button:focus {
   left: 12.1%;
   overflow: hidden;
 }
-/* line 406, ../../scss/main.scss */
+/* line 414, ../../scss/main.scss */
 .macbook img {
   position: relative;
   z-index: 1;
   width: 100%;
 }
 
-/* line 413, ../../scss/main.scss */
+/* line 421, ../../scss/main.scss */
 .features {
   text-align: center;
 }
 
-/* line 417, ../../scss/main.scss */
+/* line 425, ../../scss/main.scss */
 .feature {
   display: inline-block;
   text-align: center;
@@ -653,22 +633,22 @@ button:focus {
   min-width: 300px;
   margin-top: 70px;
 }
-/* line 424, ../../scss/main.scss */
+/* line 432, ../../scss/main.scss */
 .feature strong {
   margin-bottom: 10px;
 }
-/* line 426, ../../scss/main.scss */
+/* line 434, ../../scss/main.scss */
 .feature i {
   font-size: 90px;
   margin-bottom: 65px;
 }
-/* line 431, ../../scss/main.scss */
+/* line 439, ../../scss/main.scss */
 .feature p {
   margin: 0 auto;
   max-width: 275px;
 }
 
-/* line 437, ../../scss/main.scss */
+/* line 445, ../../scss/main.scss */
 .feature-bubble {
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
@@ -680,17 +660,17 @@ button:focus {
   margin: 0 auto 30px;
 }
 
-/* line 444, ../../scss/main.scss */
+/* line 452, ../../scss/main.scss */
 .telegraphic h2 {
   margin-bottom: 50px;
 }
 
-/* line 446, ../../scss/main.scss */
+/* line 454, ../../scss/main.scss */
 .slider {
   width: 100%;
 }
 
-/* line 450, ../../scss/main.scss */
+/* line 458, ../../scss/main.scss */
 .slider-viewport {
   -webkit-perspective: 1500;
   -moz-perspective: 1500;
@@ -700,7 +680,7 @@ button:focus {
   position: relative;
   height: 100%;
 }
-/* line 455, ../../scss/main.scss */
+/* line 463, ../../scss/main.scss */
 .slider-viewport li {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
@@ -720,12 +700,12 @@ button:focus {
   top: 0;
   left: 0;
 }
-/* line 465, ../../scss/main.scss */
+/* line 473, ../../scss/main.scss */
 .slider-viewport li img {
   display: block;
   width: 100%;
 }
-/* line 470, ../../scss/main.scss */
+/* line 478, ../../scss/main.scss */
 .slider-viewport li.is-next {
   -webkit-transition: all 1000ms ease;
   -moz-transition: all 1000ms ease;
@@ -743,7 +723,7 @@ button:focus {
   -o-transition-delay: 275ms;
   transition-delay: 275ms;
 }
-/* line 477, ../../scss/main.scss */
+/* line 485, ../../scss/main.scss */
 .slider-viewport li.active {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
@@ -756,7 +736,7 @@ button:focus {
   z-index: 2;
   float: left;
 }
-/* line 485, ../../scss/main.scss */
+/* line 493, ../../scss/main.scss */
 .slider-viewport li.remove {
   -webkit-transition: all 600ms ease;
   -moz-transition: all 600ms ease;
@@ -771,12 +751,12 @@ button:focus {
   opacity: 0;
 }
 
-/* line 493, ../../scss/main.scss */
+/* line 501, ../../scss/main.scss */
 .slider-pagination {
   text-align: center;
   cursor: default;
 }
-/* line 497, ../../scss/main.scss */
+/* line 505, ../../scss/main.scss */
 .slider-pagination li {
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
@@ -796,7 +776,7 @@ button:focus {
   cursor: pointer;
   overflow: hidden;
 }
-/* line 509, ../../scss/main.scss */
+/* line 517, ../../scss/main.scss */
 .slider-pagination li.active {
   -webkit-transform: scale(1.1);
   -moz-transform: scale(1.1);
@@ -809,7 +789,7 @@ button:focus {
 /****************************************
 * Misc.
 ****************************************/
-/* line 520, ../../scss/main.scss */
+/* line 528, ../../scss/main.scss */
 #mfPreviewBar, #mfPreviewBarShow {
   display: none !important;
 }
