--- a/public/css/main.css
+++ b/public/css/main.css
@@ -278,75 +278,94 @@ button:focus {
 }
 
 /* line 171, ../../scss/main.scss */
+.success-msg-container {
+  padding-top: 22px;
+  padding-bottom: 24px;
+}
+
+/* line 176, ../../scss/main.scss */
+.success-msg {
+  -webkit-border-radius: 30px;
+  -moz-border-radius: 30px;
+  -ms-border-radius: 30px;
+  -o-border-radius: 30px;
+  border-radius: 30px;
+  color: #7118b2;
+  border: 1px solid #7118b2;
+  padding: 15px 50px;
+  font-size: 18px;
+}
+
+/* line 184, ../../scss/main.scss */
 .row {
   width: 100%;
 }
 
-/* line 175, ../../scss/main.scss */
+/* line 188, ../../scss/main.scss */
 .purple {
   color: #7118b2;
 }
 
-/* line 177, ../../scss/main.scss */
+/* line 190, ../../scss/main.scss */
 .grey-background {
   background: #edf1f2;
   color: #000;
 }
 
-/* line 182, ../../scss/main.scss */
+/* line 195, ../../scss/main.scss */
 .light-gray-background {
   background: #eff3f6;
   color: #000;
 }
 
-/* line 187, ../../scss/main.scss */
+/* line 200, ../../scss/main.scss */
 .dark-background {
   background: #000;
   color: #fff;
 }
 
-/* line 192, ../../scss/main.scss */
+/* line 205, ../../scss/main.scss */
 .purple-background {
   background: #7118b2;
   color: #fff;
 }
-/* line 196, ../../scss/main.scss */
+/* line 209, ../../scss/main.scss */
 .purple-background a {
   color: #fff;
 }
-/* line 197, ../../scss/main.scss */
+/* line 210, ../../scss/main.scss */
 .purple-background a:hover {
   color: #000;
 }
 
-/* line 200, ../../scss/main.scss */
+/* line 213, ../../scss/main.scss */
 .container {
   text-align: center;
   max-width: 980px;
   margin: 0 auto;
 }
 
-/* line 206, ../../scss/main.scss */
+/* line 219, ../../scss/main.scss */
 .header-padding {
   padding: 28px;
 }
 
-/* line 210, ../../scss/main.scss */
+/* line 223, ../../scss/main.scss */
 .hero-padding {
   padding: 30px 28px 370px;
 }
 
-/* line 214, ../../scss/main.scss */
+/* line 227, ../../scss/main.scss */
 .base-section-padding {
   text-align: center;
   padding: 110px 0 135px;
 }
-/* line 218, ../../scss/main.scss */
+/* line 231, ../../scss/main.scss */
 .base-section-padding.telegraphic {
   padding-bottom: 80px;
 }
 
-/* line 223, ../../scss/main.scss */
+/* line 236, ../../scss/main.scss */
 .logo {
   margin: 0 auto;
   text-indent: -9999px;
@@ -360,7 +379,7 @@ button:focus {
 /****************************************
 * Intro animations
 ****************************************/
-/* line 243, ../../scss/main.scss */
+/* line 256, ../../scss/main.scss */
 .js .hero-header-first,
 .js .hero-header-second,
 .js .hero-container p,
@@ -369,7 +388,7 @@ button:focus {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
 }
-/* line 246, ../../scss/main.scss */
+/* line 259, ../../scss/main.scss */
 .js .hero-header-first,
 .js .hero-header-second {
   -webkit-transform: translate3d(0, 7.5px, 0);
@@ -378,7 +397,7 @@ button:focus {
   -o-transform: translate3d(0, 7.5px, 0);
   transform: translate3d(0, 7.5px, 0);
 }
-/* line 254, ../../scss/main.scss */
+/* line 267, ../../scss/main.scss */
 .js .hero {
   -webkit-perspective: 1100;
   -moz-perspective: 1100;
@@ -386,7 +405,7 @@ button:focus {
   -o-perspective: 1100;
   perspective: 1100;
 }
-/* line 256, ../../scss/main.scss */
+/* line 269, ../../scss/main.scss */
 .js .hero-header-first {
   -webkit-transition: all 700ms ease;
   -moz-transition: all 700ms ease;
@@ -397,7 +416,7 @@ button:focus {
   -o-transition-delay: 300ms;
   transition-delay: 300ms;
 }
-/* line 261, ../../scss/main.scss */
+/* line 274, ../../scss/main.scss */
 .js .hero-header-second {
   -webkit-transition: all 700ms ease;
   -moz-transition: all 700ms ease;
@@ -408,7 +427,7 @@ button:focus {
   -o-transition-delay: 600ms;
   transition-delay: 600ms;
 }
-/* line 267, ../../scss/main.scss */
+/* line 280, ../../scss/main.scss */
 .js .hero-container p,
 .js .hero-container .sign-up {
   -webkit-transition: opacity 1000ms ease;
@@ -420,7 +439,7 @@ button:focus {
   -o-transition-delay: 1000ms;
   transition-delay: 1000ms;
 }
-/* line 284, ../../scss/main.scss */
+/* line 297, ../../scss/main.scss */
 .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .hero-header-first,
 .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .hero-header-second,
 .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .hero-container p,
@@ -429,7 +448,7 @@ button:focus {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
 }
-/* line 287, ../../scss/main.scss */
+/* line 300, ../../scss/main.scss */
 .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .hero-header-first,
 .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .hero-header-second {
   -webkit-transform: translate3d(0, 0, 0);
@@ -438,13 +457,13 @@ button:focus {
   -o-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
 }
-/* line 295, ../../scss/main.scss */
+/* line 308, ../../scss/main.scss */
 .js .features h2,
 .js .features .feature {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
 }
-/* line 298, ../../scss/main.scss */
+/* line 311, ../../scss/main.scss */
 .js .features h2,
 .js .features .feature {
   -webkit-transform: translate3d(0, 15px, 0);
@@ -453,7 +472,7 @@ button:focus {
   -o-transform: translate3d(0, 15px, 0);
   transform: translate3d(0, 15px, 0);
 }
-/* line 301, ../../scss/main.scss */
+/* line 314, ../../scss/main.scss */
 .js .features h2 {
   -webkit-transition: all 750ms ease;
   -moz-transition: all 750ms ease;
@@ -464,41 +483,41 @@ button:focus {
   -o-transition-delay: 100ms;
   transition-delay: 100ms;
 }
-/* line 306, ../../scss/main.scss */
+/* line 319, ../../scss/main.scss */
 .js .features .feature {
   -webkit-transition: all 750ms ease;
   -moz-transition: all 750ms ease;
   -o-transition: all 750ms ease;
   transition: all 750ms ease;
 }
-/* line 308, ../../scss/main.scss */
+/* line 321, ../../scss/main.scss */
 .js .features .feature-first {
   -webkit-transition-delay: 200ms;
   -moz-transition-delay: 200ms;
   -o-transition-delay: 200ms;
   transition-delay: 200ms;
 }
-/* line 310, ../../scss/main.scss */
+/* line 323, ../../scss/main.scss */
 .js .features .feature-second {
   -webkit-transition-delay: 400ms;
   -moz-transition-delay: 400ms;
   -o-transition-delay: 400ms;
   transition-delay: 400ms;
 }
-/* line 312, ../../scss/main.scss */
+/* line 325, ../../scss/main.scss */
 .js .features .feature-third {
   -webkit-transition-delay: 600ms;
   -moz-transition-delay: 600ms;
   -o-transition-delay: 600ms;
   transition-delay: 600ms;
 }
-/* line 319, ../../scss/main.scss */
+/* line 332, ../../scss/main.scss */
 .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .features.active h2,
 .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .features.active .feature {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
 }
-/* line 322, ../../scss/main.scss */
+/* line 335, ../../scss/main.scss */
 .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .features.active h2,
 .js.wf-opensans-n4-active.wf-grumpyblack24-n4-active.wf-active .features.active .feature {
   -webkit-transform: translate3d(0, 0, 0);
@@ -511,23 +530,23 @@ button:focus {
 /****************************************
 * Index
 ****************************************/
-/* line 330, ../../scss/main.scss */
+/* line 343, ../../scss/main.scss */
 .menu-header {
   position: relative;
   z-index: 10;
 }
 
-/* line 336, ../../scss/main.scss */
+/* line 349, ../../scss/main.scss */
 .menu li {
   display: inline-block;
   margin: 5px 0 0 15px;
 }
-/* line 340, ../../scss/main.scss */
+/* line 353, ../../scss/main.scss */
 .menu li a {
   position: relative;
   color: #7118b2;
 }
-/* line 345, ../../scss/main.scss */
+/* line 358, ../../scss/main.scss */
 .menu li a:after {
   -webkit-transition: all 200ms ease;
   -moz-transition: all 200ms ease;
@@ -548,11 +567,11 @@ button:focus {
   background: #7118b2;
   content: '';
 }
-/* line 358, ../../scss/main.scss */
+/* line 371, ../../scss/main.scss */
 .menu li a:hover {
   color: #7118b2;
 }
-/* line 361, ../../scss/main.scss */
+/* line 374, ../../scss/main.scss */
 .menu li a:hover:after {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=25);
   opacity: 0.25;
@@ -563,29 +582,29 @@ button:focus {
   transform: translate3d(0, 2px, 0);
 }
 
-/* line 369, ../../scss/main.scss */
+/* line 382, ../../scss/main.scss */
 .relative {
   position: relative;
 }
 
-/* line 373, ../../scss/main.scss */
+/* line 386, ../../scss/main.scss */
 .hero-container {
   margin: 0 auto;
   width: 650px;
   padding-bottom: 30px;
 }
-/* line 378, ../../scss/main.scss */
+/* line 391, ../../scss/main.scss */
 .hero-container p {
   max-width: 570px;
 }
 
-/* line 383, ../../scss/main.scss */
+/* line 396, ../../scss/main.scss */
 .on-top {
   z-index: 99;
   position: relative;
 }
 
-/* line 388, ../../scss/main.scss */
+/* line 401, ../../scss/main.scss */
 .hero-tv {
   width: 676px;
   position: absolute;
@@ -597,13 +616,13 @@ button:focus {
   transform: translateX(-50%);
 }
 
-/* line 395, ../../scss/main.scss */
+/* line 408, ../../scss/main.scss */
 .macbook {
   position: relative;
   width: 828px;
   margin: 50px auto 0;
 }
-/* line 400, ../../scss/main.scss */
+/* line 413, ../../scss/main.scss */
 .macbook .macbook-viewport {
   position: absolute;
   z-index: 2;
@@ -613,19 +632,19 @@ button:focus {
   left: 12.1%;
   overflow: hidden;
 }
-/* line 410, ../../scss/main.scss */
+/* line 423, ../../scss/main.scss */
 .macbook img {
   position: relative;
   z-index: 1;
   width: 100%;
 }
 
-/* line 417, ../../scss/main.scss */
+/* line 430, ../../scss/main.scss */
 .features {
   text-align: center;
 }
 
-/* line 421, ../../scss/main.scss */
+/* line 434, ../../scss/main.scss */
 .feature {
   display: inline-block;
   text-align: center;
@@ -633,22 +652,22 @@ button:focus {
   min-width: 300px;
   margin-top: 70px;
 }
-/* line 428, ../../scss/main.scss */
+/* line 441, ../../scss/main.scss */
 .feature strong {
   margin-bottom: 10px;
 }
-/* line 430, ../../scss/main.scss */
+/* line 443, ../../scss/main.scss */
 .feature i {
   font-size: 90px;
   margin-bottom: 65px;
 }
-/* line 435, ../../scss/main.scss */
+/* line 448, ../../scss/main.scss */
 .feature p {
   margin: 0 auto;
   max-width: 275px;
 }
 
-/* line 441, ../../scss/main.scss */
+/* line 454, ../../scss/main.scss */
 .feature-bubble {
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
@@ -660,44 +679,44 @@ button:focus {
   margin: 0 auto 30px;
 }
 
-/* line 448, ../../scss/main.scss */
+/* line 461, ../../scss/main.scss */
 .telegraphic h2 {
   margin-bottom: 50px;
 }
 
-/* line 450, ../../scss/main.scss */
+/* line 463, ../../scss/main.scss */
 footer.base-section-padding {
   padding: 80px 0 300px;
 }
-/* line 453, ../../scss/main.scss */
+/* line 466, ../../scss/main.scss */
 footer.base-section-padding .sign-up {
   margin: 40px 0 150px;
 }
-/* line 456, ../../scss/main.scss */
+/* line 469, ../../scss/main.scss */
 footer.base-section-padding .sign-up .base-input {
   border: 2px solid #d0d0d0;
 }
-/* line 459, ../../scss/main.scss */
+/* line 472, ../../scss/main.scss */
 footer.base-section-padding i {
   position: relative;
   top: 15px;
   margin: 0 -3px 0;
 }
-/* line 465, ../../scss/main.scss */
+/* line 478, ../../scss/main.scss */
 footer.base-section-padding a {
   color: #7118b2;
 }
-/* line 468, ../../scss/main.scss */
+/* line 481, ../../scss/main.scss */
 footer.base-section-padding a:hover {
   color: #8e1edf;
 }
 
-/* line 472, ../../scss/main.scss */
+/* line 485, ../../scss/main.scss */
 .slider {
   width: 100%;
 }
 
-/* line 476, ../../scss/main.scss */
+/* line 489, ../../scss/main.scss */
 .slider-viewport {
   -webkit-perspective: 1500;
   -moz-perspective: 1500;
@@ -707,7 +726,7 @@ footer.base-section-padding a:hover {
   position: relative;
   height: 100%;
 }
-/* line 481, ../../scss/main.scss */
+/* line 494, ../../scss/main.scss */
 .slider-viewport li {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
@@ -726,12 +745,12 @@ footer.base-section-padding a:hover {
   top: 0;
   left: 0;
 }
-/* line 490, ../../scss/main.scss */
+/* line 503, ../../scss/main.scss */
 .slider-viewport li img {
   display: block;
   width: 100%;
 }
-/* line 495, ../../scss/main.scss */
+/* line 508, ../../scss/main.scss */
 .slider-viewport li.is-next {
   -webkit-transition: all 1000ms ease;
   -moz-transition: all 1000ms ease;
@@ -749,7 +768,7 @@ footer.base-section-padding a:hover {
   -o-transition-delay: 275ms;
   transition-delay: 275ms;
 }
-/* line 502, ../../scss/main.scss */
+/* line 515, ../../scss/main.scss */
 .slider-viewport li.active {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
@@ -763,7 +782,7 @@ footer.base-section-padding a:hover {
   float: left;
   cursor: pointer;
 }
-/* line 511, ../../scss/main.scss */
+/* line 524, ../../scss/main.scss */
 .slider-viewport li.remove {
   -webkit-transition: all 600ms ease;
   -moz-transition: all 600ms ease;
@@ -778,12 +797,12 @@ footer.base-section-padding a:hover {
   opacity: 0;
 }
 
-/* line 519, ../../scss/main.scss */
+/* line 532, ../../scss/main.scss */
 .slider-pagination {
   text-align: center;
   cursor: default;
 }
-/* line 523, ../../scss/main.scss */
+/* line 536, ../../scss/main.scss */
 .slider-pagination li {
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
@@ -803,7 +822,7 @@ footer.base-section-padding a:hover {
   cursor: pointer;
   overflow: hidden;
 }
-/* line 535, ../../scss/main.scss */
+/* line 548, ../../scss/main.scss */
 .slider-pagination li.active {
   -webkit-transform: scale(1.1);
   -moz-transform: scale(1.1);
@@ -816,7 +835,7 @@ footer.base-section-padding a:hover {
 /****************************************
 * Misc.
 ****************************************/
-/* line 546, ../../scss/main.scss */
+/* line 559, ../../scss/main.scss */
 #mfPreviewBar, #mfPreviewBarShow {
   display: none !important;
 }
